--- a/test_eprime.test_request.approved.html
+++ b/test_eprime.test_request.approved.html
@@ -43,30 +43,30 @@
      <ul>
       <li>
        Word Count:
-       <span id="wordCount">
+       <span id="test_number_1">
        </span>
       </li>
       <li>
        Discouraged Words:
-       <span id="discouragedWordCount">
+       <span id="test_number_2">
        </span>
       </li>
       <li>
        Possible Violations:
-       <span id="possibleViolationCount">
+       <span id="test_number_3">
        </span>
       </li>
      </ul>
     </div>
     <div class="eprime_text" id="eprimeoutput">
     </div>
-    <label for="inputtext">
+    <label for="eprime_text">
      Text:
     </label>
     <br>
-     <textarea cols="60" id="inputtext" rows="5"></textarea>
+     <textarea cols="60" id="test_field" rows="5"></textarea>
      <br/>
-     <button id="CheckForEPrimeButton" onclick="processInputText();">
+     <button id="test_button" onclick="processInputText();">
       Check For E-Prime
      </button>
     </br>
